<resources>
    <string name="app_name">App Cliente Vip V5</string>
    <string name="txt_titulo">Aplicativo do Maddo</string>
    <string name="txtMenu">Menu Principal</string>
    <string name="txtDataAtual">03/01/2020</string>
    <string name="txtHoraAtual">10:05:00</string>
    <string name="btnCadastro">CADASTRAR</string>

    <string name="btnVoltar">VOLTAR</string>
    <string name="btnEditar">EDITAR</string>
    <string name="btnSalvar">SALVAR</string>

    <!-- tela de login -->

    <string name="txtLogin">Login</string>
    <string name="txtLembrar">Lembrar</string>
    <string name="txtRecurarSenha">Recuperar Senha</string>
    <string name="btnAcessar">ACESSAR</string>
    <string name="btnSejaVip">SEJA VIP</string>
    <string name="txtVersapApp">Versão V1.0</string>
    <string name="txtLerPolitica">Ler Política de Privacidade - Termos de Uso.</string>
    <string name="txtImagemDeFundo">Imagem de Fundo</string>

    <!-- tela novo cliente vip -->

    <string name="txtNovoVip">Novo Vip</string>
    <string name="txtMeusDados">Meus Dados</string>
    <string name="txtAtualizarMeusDados">Atualizar Meus Dados</string>
    <string name="txtPrimeiroNome">Primeiro Nome</string>
    <string name="txtSobreNome">Sobre Nome</string>
    <string name="txtHintSobreNome">Digite seu sobre nome...</string>
    <string name="txtPessoaFisica">Pessoa Fisica</string>
    <string name="btnSalvarContinuar">SALVAR E CONTINUAR</string>
    <string name="btnCancelar">CANCELAR</string>

    <!-- tela novo cliente pessoa física -->

    <string name="txtClientePessoaFisica">Pessoa Física</string>
    <string name="txtCPF">CPF</string>
    <string name="txtHintCPF">Digite seu CPF</string>
    <string name="txtNomeCompleto">Nome completo</string>
    <string name="txtHintNomeCompleto">Nome completo igual do CPF...</string>

    <!-- tela novo cliente pessoa jurídica -->

    <string name="txtClientePessoaJuridica">Pessoa Jurídica</string>
    <string name="txtCNPJ">CNPJ</string>
    <string name="txtHintCNPJ">Digite seu CNPJ</string>
    <string name="txtRazaoSocial">Razao Social</string>
    <string name="txtHintRazaoSocial">Razao Social igual do cartão CNPJ</string>
    <string name="txtDataAberturaPJ">Data de Abertura da Empresa</string>
    <string name="txtSimplesNacional">Simples Nacional</string>
    <string name="txtMEI">MEI</string>

    <!-- tela recuperar senha -->

    <string name="txtRecuperarSenha">Recuperar Senha</string>
    <string name="txtHintEmailCadastrado">Digite o e-mail cadastrado</string>
    <string name="btnRecuperar">RECUPERAR</string>


    <!-- formulário de cadastro de usuários -->

    <string name="txtFinalizacaoCadastro">Credenciais de Acesso</string>
    <string name="txtNome">Nome</string>
    <string name="txtHintNome">Digite seu primeiro nome...</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtHintEmail">Digite o seu melhor e-mail...</string>
    <string name="txtSenhaA">Senha</string>
    <string name="txtHintSenhaA">Informe uma senha...</string>
    <string name="txtSenhaB">Repita a senha</string>
    <string name="txtHintSenhaB">Confirme a senha digitada...</string>
    <string name="txtTermo">Li e concordo com os termos de uso e política de privacidade.</string>
    <string name="btnMeusDados">MEUS DADOS</string>
    <string name="btnAtualizarMeusDados">ATUALIZAR MEUS DADOS</string>
    <string name="btnExcluirMinhaConta">EXCLUIR MINHA CONTA</string>
    <string name="btnConsultarClientesVip">CONSULTAR CLIENTES VIP</string>
    <string name="txtCliente">Cliente</string>

    <!-- background texto -->
    <string name="txtTituloBackground">Aplicando Efeito\nBackground\nGradiente</string>

</resources>
