<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ClienteVipActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNovoVip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/txtNovoVip"
        android:textColor="@color/colorAzul"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPrimeiroNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:text="@string/txtPrimeiroNome"
        android:textColor="@color/colorVerde"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintNome"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtSobreNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:text="@string/txtSobreNome"
        android:textColor="@color/colorVerde"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSobreNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintSobreNome"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/chPessoaFisica"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="pessoaFisica"
        android:text="@string/txtPessoaFisica"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSalvarContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnSalvarContinuar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnCancelar" />


</androidx.appcompat.widget.LinearLayoutCompat>